<resources>
    <string name="app_name">Track $$$</string>

    <string-array name="expense_categories_array">
        <item>Food</item>
        <item>Health</item>
        <item>Health insurance</item>
        <item>Other insurance</item>
        <item>Education</item>
        <item>Debt payment</item>
        <item>Clothes</item>
        <item>Recreation</item>
        <item>Lodging</item>
        <item>Saving</item>
        <item>Transportation</item>
        <item>Communication</item>
        <item>House items</item>
        <item>Exercise</item>
        <item>Donation</item>
        <item>Security</item>
        <item>Other</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_list_summary">Welcome to Expense List Summary!</string>
    <string name="unit">dollars</string>
    <string name="this_month_total">This month\'s total:</string>
    <string name="us_dollars">dollars</string>
    <string name="save_btn_label">Save</string>
    <string name="business_name_hint">Business name</string>
    <string name="amount_hint">0.00</string>
    <string name="this_week">This week</string>
    <string name="this_month">This_month</string>
    <string name="this_year">This_year</string>
    <string name="this_weeks_total_label">This week\'s total:</string>
    <string name="this_months_total_label">This month\'s total:</string>
    <string name="this_years_total_label">This year\'s total:</string>
    <string name="update_btn_label">update</string>
    <string name="delete_btn_label_edit_expense">delete</string>
    <string name="msg_deleted_expense">Expense deleted!</string>
    <string name="msg_expense_updated">Expense updated.</string>
    <string name="default_category_newExpense">Food</string>
    <string name="msg_invalid_livePeriod">Invalid LivePeriod.</string>

    <!--AppWidget strings-->
    <string name="appwidget_title_label">This month\'s total</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidge_update_label">update</string>

    <string name="default_notification_channel_id">11</string>
    <string name="pie_chart_content_description">Click the \'+\' button to add new expenses</string>
    <string name="empty_current_year_message">Click the \'+\' button to add new expenses.</string>
    <string name="money_related_image">Money related image</string>
    <string name="chart_description">Expenses by Category</string>
    <string name="title_for_pie_summary">Expenses by category</string>
    <string name="title_expenses_for_curr_category">Selected expenses</string>
    <string name="title_new_expense">Add new expense</string>
    <string name="title_edit_expense">Edit expense</string>
    <string name="alert_dialog_title">Message</string>
    <string name="alert_dialog_message">Save changes ??</string>
    <string name="alert_dialog_yes_label">Yes</string>
    <string name="alert_dialog_no_label">No</string>
    <string name="no_internet_error_message">Please connect to the Internet and try again.</string>
    <string name="msg_invalid_expense">Invalid expense.</string>
    <string name="msg_unavailable_picaso_image">The money image is not available</string>
    <string name="zero_total">0.00</string>
</resources>
